sentence with highlighted words as well as word count

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="col-12">
             <div class="wordCount">
-                
+                <h3>Word Count: <div class="count"> </div></h3>
             </div>
         </div>
 
