finding all 'longest words' and highlighting it

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="simple-grid.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Words Widget</title>
 
     <script type="text/x-template" class="templateName">
         {{#each sentence}}
@@ -27,7 +27,7 @@
             <div class="col-6">
                 <h4>Please enter a sentence</h4>
                 <!-- <input type="text" placeholder="enter a senternce.." class="input" onfocus="this.value=''"> -->
-                <textarea class="input" placeholder="enter a senternce.." onfocus="this.value=''" cols="45" rows="3"></textarea>
+                <textarea class="input" placeholder="enter a senternce.." onfocus="this.value=''" cols="43" rows="3"></textarea>
                 <button class="analyse">Analyse Sentence</button>
                 <div class="sentenceDisplay"></div>
                 <div class="lessthan5"> </div>
