keeping track of the last 5 sentences

--- a/index.html
+++ b/index.html
@@ -41,20 +41,14 @@
         </div>
         <div class="row">
             <div class="col-11">
-                <div class="last5sentences" ></div>
+                <div class="last5sentences" >
+                    <ul id="display5">
+            
+                    </ul>
+                </div>
             </div>
-            <!-- <div class="col-6">
-                <h4>Word Count: <div class="count"> </div></h4>
-            </div> -->
 
         </div>
-
-        <!-- <div class="row">
-            <div class="col-12">
-                <textarea class="last5sentences" cols="30" rows="5"></textarea>
-                <div class="last5sentences" ></div>
-            </div>
-        </div> -->
 
     </div>
 
